using traefik proxy and custom domains

--- a/config/hydra.yml
+++ b/config/hydra.yml
@@ -5,10 +5,10 @@ serve:
 
 urls:
   self:
-    issuer: http://127.0.0.1:4444
-  consent: http://127.0.0.1:4455/oauth/authorize
-  login: http://127.0.0.1:4455/oauth/login
-  logout: http://127.0.0.1:4455/logout
+    issuer: http://id.kratos.com/k/hydra
+  consent: http://id.kratos.com/oauth/authorize
+  login: http://id.kratos.com/oauth/login
+  logout: http://id.kratos.com/logout
 
 secrets:
   system:
