--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,31 @@
 version: '3.7'
 
 services:
-  kratos-migrate:
-    image: oryd/kratos:v0.5.5-alpha.1.pre.1
-    volumes:
-      - type: bind
-        source: ./.ory
-        target: /etc/config/kratos
+  # Traefik dashboard visible on http://localhost:8080/dashboard
+  traefik:
+    image: traefik:v2.4
     command:
-      -c /etc/config/kratos/kratos.yml migrate sql -e --yes
-    restart: on-failure
-    environment:
-      - DSN=mysql://root:secret@tcp(mysqld:3306)/app?max_conns=20&max_idle_conns=4
+      - "--log.level=DEBUG"
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
+  # Kratos Public Api on http://id.kratos.com/k/kratos
+  # Kratos Admin Api only on intranet (http://kratos:4434)
   kratos:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.kratos.rule=Host(`id.kratos.com`) && PathPrefix(`/k/kratos`)"
+      - "traefik.http.middlewares.kratos-prefix.stripprefix.prefixes=/k/kratos"
+      - "traefik.http.routers.kratos.entrypoints=web"
+      - "traefik.http.routers.kratos.middlewares=kratos-prefix@docker"
+      - "traefik.http.services.kratos.loadbalancer.server.port=4433"
     depends_on:
       - kratos-migrate
     image: oryd/kratos:v0.5.5-alpha.1.pre.1
@@ -32,22 +44,24 @@ services:
       - DSN=mysql://root:secret@tcp(mysqld:3306)/app?max_conns=20&max_idle_conns=4
       - LOG_LEVEL=debug
 
-  hydra-migrate:
-    image: oryd/hydra:v1.9.2
-    command:
-      migrate -c /etc/config/hydra/hydra.yml sql -e --yes
-    restart: on-failure
-    volumes:
-      - type: bind
-        source: ./.ory
-        target: /etc/config/hydra
-    environment:
-      - DSN=mysql://root:secret@tcp(mysqld:3306)/app?max_conns=20&max_idle_conns=4
-
+  # Hydra Public Api on http://id.kratos.com/k/hydra
+  # Hydra Admin Api only on intranet (http://hydra:4445)
   hydra:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.hydra.rule=Host(`id.kratos.com`) && PathPrefix(`/k/hydra`)"
+      - "traefik.http.middlewares.hydra-prefix.stripprefix.prefixes=/k/hydra"
+      - "traefik.http.routers.hydra.entrypoints=web"
+      - "traefik.http.routers.hydra.middlewares=hydra-prefix@docker"
+      - "traefik.http.services.hydra.loadbalancer.server.port=4444"
     image: oryd/hydra:v1.9.2
     command:
-      serve -c /etc/config/hydra/hydra.yml all --dangerous-force-http
+      - serve
+      - -c=/etc/config/hydra/hydra.yml
+      - all
+      - --dangerous-force-http
+      # Required to make http client work
+      - --dangerous-allow-insecure-redirect-urls=http://client.kratos-app.com/callback
     environment:
       - DSN=mysql://root:secret@tcp(mysqld:3306)/app?max_conns=20&max_idle_conns=4
     restart: unless-stopped
@@ -62,6 +76,64 @@ services:
       - "4445:4445" # Admin port
       - "5555:5555" # Port for hydra token user
 
+  ui:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.ui.rule=Host(`id.kratos.com`)"
+      - "traefik.http.routers.ui.entrypoints=web"
+    build:
+      context: .
+      dockerfile: Dockerfile.nextjs
+    ports:
+      - "4455:4455"
+
+  client-app:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.client.rule=Host(`client.kratos-app.com`)"
+      - "traefik.http.routers.client.entrypoints=web"
+    build:
+      context: .
+      dockerfile: Dockerfile.client-app
+    ports:
+      - "5550:5550"
+
+  # Mail UI on http://mail.kratos.com
+  mailslurper:
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.mail.rule=Host(`mail.kratos.com`)"
+      - "traefik.http.routers.mail.entrypoints=web"
+      - "traefik.http.services.mail.loadbalancer.server.port=4436"
+    image: oryd/mailslurper:latest-smtps
+    ports:
+      - "4436:4436"
+      - "4437:4437"
+
+  kratos-migrate:
+    image: oryd/kratos:v0.5.5-alpha.1.pre.1
+    volumes:
+      - type: bind
+        source: ./.ory
+        target: /etc/config/kratos
+    command:
+      -c /etc/config/kratos/kratos.yml migrate sql -e --yes
+    restart: on-failure
+    environment:
+      - DSN=mysql://root:secret@tcp(mysqld:3306)/app?max_conns=20&max_idle_conns=4
+
+  hydra-migrate:
+    image: oryd/hydra:v1.9.2
+    command:
+      migrate -c /etc/config/hydra/hydra.yml sql -e --yes
+    restart: on-failure
+    volumes:
+      - type: bind
+        source: ./.ory
+        target: /etc/config/hydra
+    environment:
+      - DSN=mysql://root:secret@tcp(mysqld:3306)/app?max_conns=20&max_idle_conns=4
+
   mysqld:
     image: mysql:5.7
     volumes:
@@ -74,12 +146,7 @@ services:
       - MYSQL_ROOT_PASSWORD=secret
       - MYSQL_DATABASE=app
 
-  mailslurper:
-    image: oryd/mailslurper:latest-smtps
-    ports:
-      - "4436:4436"
-      - "4437:4437"
-
+  # http://localhost:8000
   phpmyadmin:
     image: phpmyadmin:latest
     ports:
